# Duo_description

./: README.md  package.xml  setup.cfg  setup.py
duo_description/: state_publisher.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/duo_description/lib/duo_description/: state_publisher
install/duo_description/share/duo_description/: duo_robot.urdf  package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: urdf_visualize.launch.py
log/: latest_build
rviz/: duo_config.rviz
urdf/: duo.urdf  duo.urdf.xml  duo_robot.xacro
